--- a/pages/classes.html
+++ b/pages/classes.html
@@ -22,12 +22,14 @@
         <hr>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αριημητική ανάλυση</h2 class="classes_styling">
+                <h2 class="classes_styling">Αριθμητική Ανάλυση</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
                         <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Μιχαήλ Γιαννόπουλος</a>
+                        <a>Διάρκεια: 35 ώρες</a>
+                        <a>Προαπαιτούμενα: Ανάλυση Ι</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -40,7 +42,9 @@
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
                         <a>Επίπεδο: Δημοτικού</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Ελένη Ζήνωνα</a>
+                        <a>Διάρκεια: 15 ώρες</a>
+                        <a>Προαπαιτούμενα: Γονιδιακή Ι</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -48,12 +52,14 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αναλυτική γεωμετρία</h2 class="classes_styling">
+                <h2 class="classes_styling">Αναλυτική Γεωμετρία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculator.png">
                         <a>Επίπεδο: Λυκείου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Ξανθή Συριοπούλου</a>
+                        <a>Διάρκεια: 30 ώρες</a>
+                        <a>Προαπαιτούμενα: Γεωμετρία Ι</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -61,12 +67,14 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Μονομερή ανάλυση</h2 class="classes_styling">
+                <h2 class="classes_styling">Στοχαστική </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculus.png">
                         <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Παναγιώτης Δημάκος</a>
+                        <a>Διάρκεια: 30 ώρες</a>
+                        <a>Προαπαιτούμενα: Θεωρία Παιγνίων</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -79,7 +87,8 @@
                     <div class="lesson_img">
                         <img src="../images/math/graph.png">
                         <a>Επίπεδο: Γυμνασίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Σπυρίδων Κότρας</a>
+                        <a>Διάρκεια: 35 ώρες</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -90,12 +99,14 @@
         <hr>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αριημητική ανάλυση</h2 class="classes_styling">
+                <h2 class="classes_styling">Χρηματοοικονομικά</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
                         <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Ιωάννης Παλαιός</a>
+                        <a>Διάρκεια: 35 ώρες</a>
+                        <a>Προαπαιτούμενα: Κεφάλαιο Αγοράς</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -103,12 +114,14 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αριθμητική</h2 class="classes_styling">
+                <h2 class="classes_styling">Τραπεζική Λογιστική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
                         <a>Επίπεδο: Δημοτικού</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Φωτεινή Καπλάνη</a>
+                        <a>Διάρκεια: 30 ώρες</a>
+                        <a>Προαπαιτούμενα: Λογιστικά</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -118,12 +131,14 @@
         <hr>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αριημητική ανάλυση</h2 class="classes_styling">
+                <h2 class="classes_styling">Διεθνής Οικονομική </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
                         <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Χριστίνα Μπέλλου</a>
+                        <a>Διάρκεια: 25 ώρες</a>
+                        <a>Προαπαιτούμενα: Εγχώριο Εμπόριο</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -131,12 +146,14 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αριθμητική</h2 class="classes_styling">
+                <h2 class="classes_styling">Οικονομετρία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
                         <a>Επίπεδο: Δημοτικού</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Στέφανος Πούρος</a>
+                        <a>Διάρκεια: 30 ώρες</a>
+                        <a>Προαπαιτούμενα: Μαθηματικά Ι</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -144,26 +161,30 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αναλυτική γεωμετρία</h2 class="classes_styling">
+                <h2 class="classes_styling">Οικονομικό Δίκαιο </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculator.png">
                         <a>Επίπεδο: Λυκείου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Θανάσης Στυλιανός</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a>Διάρκεια: 35 ώρες</a>
+                        <a>Προαπαιτούμενα: Μακροοικονομική</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Στατιστική</h2 class="classes_styling">
+                <h2 class="classes_styling">Εγχώρια Οικονομική
+                </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/graph.png">
                         <a>Επίπεδο: Γυμνασίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Αλέξανδρος Ευαγγελής</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
+                        <a>Διάρκεια: 20 ώρες</a>
                     </div>
                 </div>
             </div>
@@ -172,12 +193,14 @@
         <hr>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αριημητική ανάλυση</h2 class="classes_styling">
+                <h2 class="classes_styling">Φυσιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
                         <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Ελευθερία Ράμψη</a>
+                        <a>Διάρκεια: 35 ώρες</a>
+                        <a>Προαπαιτούμενα: Θεραπευτική</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -185,12 +208,15 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αριθμητική</h2 class="classes_styling">
+                <h2 class="classes_styling">Μοριακή Βιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
                         <a>Επίπεδο: Δημοτικού</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Κατερίνα Μάργκου</a>
+                        <a>Διάρκεια: 40 ώρες</a>
+                        <a>Προαπαιτούμενα: Βιοχημεία</a>
+
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -198,12 +224,14 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αναλυτική γεωμετρία</h2 class="classes_styling">
+                <h2 class="classes_styling">Γενετική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculator.png">
                         <a>Επίπεδο: Λυκείου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Ειρήνη Μαυροπούλου</a>
+                        <a>Διάρκεια: 40 ώρες</a>
+                        <a>Προαπαιτούμενα: Γονιδιακή Ι</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -211,12 +239,13 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Μονομερή ανάλυση</h2 class="classes_styling">
+                <h2 class="classes_styling">Αναλυτική Χημεία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculus.png">
                         <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Κοσμάς Καλύβης</a>
+                        <a>Διάρκεια: 30 ώρες</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -224,12 +253,14 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Μονομερή ανάλυση</h2 class="classes_styling">
+                <h2 class="classes_styling">Μικροβιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculus.png">
                         <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Κωνσταντίνος Μπάρας</a>
+                        <a>Διάρκεια: 30 ώρες</a>
+                        <a>Προαπαιτούμενα: Επιδημιολογία Ι</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -237,12 +268,14 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Στατιστική</h2 class="classes_styling">
+                <h2 class="classes_styling">Εξελικτική Βιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/graph.png">
                         <a>Επίπεδο: Γυμνασίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
+                        <a>Διδάσκων: Χρήστος Αντωνιάδης</a>
+                        <a>Διάρκεια: 30 ώρες</a>
+                        <a>Προαπαιτούμενα: Ζωολογία</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
