--- a/pages/classes.html
+++ b/pages/classes.html
@@ -26,7 +26,7 @@
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
+                        <a>Έτος: 1ο</a>
                         <a>Διδάσκων: Μιχαήλ Γιαννόπουλος</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a>Προαπαιτούμενα: Ανάλυση Ι</a>
@@ -37,14 +37,13 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Αριθμητική</h2 class="classes_styling">
+                <h2 class="classes_styling">Στοχαστική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
-                        <a>Επίπεδο: Δημοτικού</a>
+                        <a>Έτος: 3ο</a>
                         <a>Διδάσκων: Ελένη Ζήνωνα</a>
                         <a>Διάρκεια: 15 ώρες</a>
-                        <a>Προαπαιτούμενα: Γονιδιακή Ι</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                     </div>
                 </div>
@@ -56,7 +55,7 @@
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculator.png">
-                        <a>Επίπεδο: Λυκείου</a>
+                        <a>Έτος: 1ο</a>
                         <a>Διδάσκων: Ξανθή Συριοπούλου</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Γεωμετρία Ι</a>
@@ -67,11 +66,11 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2 class="classes_styling">Στοχαστική </h2 class="classes_styling">
+                <h2 class="classes_styling">Υπολογιστική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
+                        <a>Έτος: 2ο</a>
                         <a>Διδάσκων: Παναγιώτης Δημάκος</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Θεωρία Παιγνίων</a>
@@ -86,7 +85,7 @@
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/graph.png">
-                        <a>Επίπεδο: Γυμνασίου</a>
+                        <a>Έτος: 1ο, 2ο</a>
                         <a>Διδάσκων: Σπυρίδων Κότρας</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
@@ -102,8 +101,8 @@
                 <h2 class="classes_styling">Χρηματοοικονομικά</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/abacus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
+                        <img src="../pictures/valitsa.jpg">
+                        <a>Επίπεδο: 1ο</a>
                         <a>Διδάσκων: Ιωάννης Παλαιός</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a>Προαπαιτούμενα: Κεφάλαιο Αγοράς</a>
@@ -117,8 +116,8 @@
                 <h2 class="classes_styling">Τραπεζική Λογιστική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/book.png">
-                        <a>Επίπεδο: Δημοτικού</a>
+                        <img src="../pictures/coins.jpg">
+                        <a>Επίπεδο: 4ο</a>
                         <a>Διδάσκων: Φωτεινή Καπλάνη</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Λογιστικά</a>
@@ -134,8 +133,8 @@
                 <h2 class="classes_styling">Διεθνής Οικονομική </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/abacus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
+                        <img src="../pictures/cards.jpg">
+                        <a>Έτος: 2ο</a>
                         <a>Διδάσκων: Χριστίνα Μπέλλου</a>
                         <a>Διάρκεια: 25 ώρες</a>
                         <a>Προαπαιτούμενα: Εγχώριο Εμπόριο</a>
@@ -149,8 +148,8 @@
                 <h2 class="classes_styling">Οικονομετρία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/book.png">
-                        <a>Επίπεδο: Δημοτικού</a>
+                        <img src="../pictures/calculator.jpg">
+                        <a>Έτος: 2ο,3ο</a>
                         <a>Διδάσκων: Στέφανος Πούρος</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Μαθηματικά Ι</a>
@@ -164,8 +163,8 @@
                 <h2 class="classes_styling">Οικονομικό Δίκαιο </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/calculator.png">
-                        <a>Επίπεδο: Λυκείου</a>
+                        <img src="../pictures/trapeza.jpg">
+                        <a>Έτος: 4ο</a>
                         <a>Διδάσκων: Θανάσης Στυλιανός</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                         <a>Διάρκεια: 35 ώρες</a>
@@ -180,8 +179,8 @@
                 </h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/graph.png">
-                        <a>Επίπεδο: Γυμνασίου</a>
+                        <img src="../pictures/banknotes.jpg">
+                        <a>Έτος: 1ο</a>
                         <a>Διδάσκων: Αλέξανδρος Ευαγγελής</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
                         <a>Διάρκεια: 20 ώρες</a>
@@ -196,8 +195,8 @@
                 <h2 class="classes_styling">Φυσιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/abacus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
+                        <img src="../pictures/brain.jpg">
+                        <a>Έτος: 1ο,2ο</a>
                         <a>Διδάσκων: Ελευθερία Ράμψη</a>
                         <a>Διάρκεια: 35 ώρες</a>
                         <a>Προαπαιτούμενα: Θεραπευτική</a>
@@ -211,8 +210,8 @@
                 <h2 class="classes_styling">Μοριακή Βιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/book.png">
-                        <a>Επίπεδο: Δημοτικού</a>
+                        <img src="../pictures/moriakhbiologia.jpg">
+                        <a>Έτος: 4ο</a>
                         <a>Διδάσκων: Κατερίνα Μάργκου</a>
                         <a>Διάρκεια: 40 ώρες</a>
                         <a>Προαπαιτούμενα: Βιοχημεία</a>
@@ -227,8 +226,8 @@
                 <h2 class="classes_styling">Γενετική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/calculator.png">
-                        <a>Επίπεδο: Λυκείου</a>
+                        <img src="../pictures/genetics.jpg">
+                        <a>Έτος: 3ο</a>
                         <a>Διδάσκων: Ειρήνη Μαυροπούλου</a>
                         <a>Διάρκεια: 40 ώρες</a>
                         <a>Προαπαιτούμενα: Γονιδιακή Ι</a>
@@ -242,8 +241,8 @@
                 <h2 class="classes_styling">Αναλυτική Χημεία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/calculus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
+                        <img src="../pictures/analytikhxhmeia.jpg">
+                        <a>Έτος: 1ο,2ο</a>
                         <a>Διδάσκων: Κοσμάς Καλύβης</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
@@ -256,8 +255,8 @@
                 <h2 class="classes_styling">Μικροβιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/calculus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
+                        <img src="../pictures/microbiology.jpg">
+                        <a>Έτος: 2ο</a>
                         <a>Διδάσκων: Κωνσταντίνος Μπάρας</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Επιδημιολογία Ι</a>
@@ -271,8 +270,8 @@
                 <h2 class="classes_styling">Εξελικτική Βιολογία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
-                        <img src="../images/math/graph.png">
-                        <a>Επίπεδο: Γυμνασίου</a>
+                        <img src="../pictures/evolutional_book.jpg">
+                        <a>Έτος: 3ο</a>
                         <a>Διδάσκων: Χρήστος Αντωνιάδης</a>
                         <a>Διάρκεια: 30 ώρες</a>
                         <a>Προαπαιτούμενα: Ζωολογία</a>
