--- a/pages/koinothta.html
+++ b/pages/koinothta.html
@@ -40,7 +40,7 @@
                 <td>ΙΑΤΡΙΚΗΣ</td>
             </tr>
             <tr>
-                <td>Χριστίνα Παπαδοπούλου</td>
+                <td>Χριστίνα Γκώνα</td>
                 <td>18.894</td>
                 <td>ΙΑΤΡΙΚΗΣ</td>
             </tr>
