--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -14,7 +14,7 @@
             <p>Μαθήματα</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./class_details.html'">
-            <p>Λεπτομέρεις μαθημάτων</p>
+            <p>Λεπτομέρειες μαθημάτων</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./koinothta.html'">
             <p>Κοινότητα</p>
