--- a/pages/koinothta.html
+++ b/pages/koinothta.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="../styles/general.css">
     <script defer src="../scripts/script.js"></script>
-    <script defer src="C:\Ifigeneia Rapti\my_cool_thing\scripts\script_enlarge_pics.js"></script>
+    <script defer src="../scripts/script_enlarge_pics.js"></script>
     <link rel="icon" type="image/png" href="../pictures/icon.png">
 
 </head>
