--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -18,6 +18,9 @@
         </button>
         <button class="button" onclick="window.parent.location.href='./koinothta.html'">
             <p>Κοινότητα</p>
+            <button class="button" onclick="window.parent.location.href='./faculty.html'">
+                <p>Ανθρώπινο Δυναμικό</p>
+            </button>
         </button>
         <button class="button" onclick="window.parent.location.href='./contact.html'">
             <p>Επικοινωνία</p>
