--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
         <img src="./pictures/icon.png" alt="Εικονίδιο φροντιστηρίου" id="title_icon">
     </div>
 
+    <div id=intro_div>
+        <div class=intro_card_row>
+            <div class=intro_card_shadow>
+                <div class=intro_card>
+                    <a>Best in class</a>
+                    <a>90% success rate</a>
+                </div>
+            </div>
+            <div class=intro_card_shadow>
+                <div class=intro_card>
+                    <a>Best in class</a>
+                    <a>90% success rate</a>
+                </div>
+            </div>
+            <div class=intro_card_shadow>
+                <div class=intro_card>
+                    <a>Best in class</a>
+                    <a>90% success rate</a>
+                </div>
+            </div>
+        </div>
+        <div class=intro_card_row>
+            <div class=intro_card_shadow>
+                <div class=intro_card>
+                    <a>Best in class</a>
+                    <a>90% success rate</a>
+                </div>
+            </div>
+            <div class=intro_card_shadow>
+                <div class=intro_card>
+                    <a>Best in class</a>
+                    <a>90% success rate</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
     <div id="progress_bar"></div>
 
 
