--- a/pages/footer.html
+++ b/pages/footer.html
@@ -12,7 +12,8 @@
                 <p>&copy; 2024-2025</p>
             </div>
             <div>
-                <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
+                <p><a href="mailto:redstonergm@gmail.com">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a
+                        href="mailto:raptifigeneia@gmail.com">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
             </div>
         </div>
     </footer>
