--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,8 +53,7 @@
             <td>3240244</td>
             <td>redstonergm@gmail.com
                 <div>
-                    <button onclick="window.location.href='mailto:redstonergm@gmail.com'"
-                        id="email-button">Επικοινωνήστε</button>
+                    <button onclick="window.location.href='mailto:redstonergm@gmail.com'">Επικοινωνήστε</button>
                 </div>
             </td>
         </tr>
