--- a/pages/footer.html
+++ b/pages/footer.html
@@ -6,6 +6,7 @@
 <body>
     <footer>
         <p>&copy; 2024-2025</p>
-        <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
+        <p><a href="mailto:redstonergm@gmail.com">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a
+                href="mailto:raptifigeneia@gmail.com">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
     </footer>
 </body>
