--- a/pages/class_details.html
+++ b/pages/class_details.html
@@ -18,7 +18,123 @@
 <body>
     <iframe src="./navbar.html" class="navbar" id="navbar_iframe"></iframe>
 
-    <p>Δεν έχω κάνει τίποτα εδώ</p>
+    <p>Αριθμητική Ανάλυση
+
+
+        Το μάθημα "Αριθμητική Ανάλυση" εστιάζει στις μεθόδους επίλυσης μαθηματικών προβλημάτων με τη χρήση αριθμητικών
+        τεχνικών και υπολογιστών. Οι φοιτητές θα εξοικειωθούν με θεμελιώδεις έννοιες, όπως η γραμμική παρεμβολή, οι
+        μέθοδοι επίλυσης μη γραμμικών εξισώσεων, η αριθμητική ολοκλήρωση και διαφοροποίηση, καθώς και η επίλυση
+        διαφορικών εξισώσεων. Το μάθημα περιλαμβάνει θεωρητική διδασκαλία για την κατανόηση των μεθόδων, πρακτική
+        εξάσκηση σε υπολογιστικά περιβάλλοντα και ανάλυση σφαλμάτων για τη βελτίωση της ακρίβειας των αποτελεσμάτων.
+        Είναι ιδανικό για φοιτητές που θέλουν να αναπτύξουν δεξιότητες στον συνδυασμό μαθηματικών και τεχνολογίας για
+        την επίλυση πρακτικών προβλημάτων.
+    </p>
+
+    <p> Στοχαστική
+        Το μάθημα "Στοχαστική" επικεντρώνεται στις μεθόδους μοντελοποίησης τυχαίων φαινομένων και διαδικασιών. Οι
+        φοιτητές μαθαίνουν βασικές αρχές της θεωρίας πιθανοτήτων, στοχαστικών διαδικασιών όπως οι αλυσίδες Markov, και
+        εφαρμογές τους σε τομείς όπως η χρηματοοικονομική ανάλυση, τα συστήματα αναμονής και η ανάλυση κινδύνου. Το
+        μάθημα συνδυάζει θεωρητική γνώση με πρακτικά παραδείγματα, προετοιμάζοντας τους φοιτητές για ερευνητικές και
+        επαγγελματικές εφαρμογές.</p>
+
+    <p>
+
+        Αναλυτική Γεωμετρία
+        Το μάθημα "Αναλυτική Γεωμετρία" εισάγει τους φοιτητές στη μελέτη γεωμετρικών σχημάτων μέσω αλγεβρικών και
+        διανυσματικών μεθόδων. Καλύπτει έννοιες όπως ευθείες, επίπεδα, κύκλους, κώνους και σφαίρες, εστιάζοντας στις
+        σχέσεις μεταξύ τους. Μέσα από τη θεωρία και ασκήσεις, οι φοιτητές μαθαίνουν να λύνουν γεωμετρικά προβλήματα με
+        μαθηματική ακρίβεια, ενώ αποκτούν βασικές δεξιότητες χρήσιμες για επιστήμες όπως η μηχανική, η φυσική και η
+        πληροφορική.
+
+    </p>
+
+    <p>Υπολογιστική
+        Το μάθημα "Υπολογιστική" παρέχει μια εισαγωγή στη χρήση αλγορίθμων και μαθηματικών μεθόδων για την επίλυση
+        σύνθετων προβλημάτων. Περιλαμβάνει θέματα όπως αλγοριθμική ανάλυση, γραμμικούς αλγόριθμους και αριθμητικές
+        μεθόδους, ενώ γίνεται πρακτική εφαρμογή σε προγραμματιστικά περιβάλλοντα. Είναι ιδανικό για φοιτητές που
+        ενδιαφέρονται για την εφαρμογή της πληροφορικής σε επιστημονικούς και τεχνολογικούς τομείς.</p>
+
+    <p>Στατιστική
+        Το μάθημα "Στατιστική" εξετάζει θεμελιώδεις τεχνικές συλλογής, ανάλυσης και παρουσίασης δεδομένων. Οι φοιτητές
+        μαθαίνουν να χρησιμοποιούν εργαλεία για την περιγραφική στατιστική, τη θεωρία πιθανοτήτων, την παλινδρόμηση και
+        τη στατιστική συμπερασματολογία. Το μάθημα περιλαμβάνει θεωρητική διδασκαλία και πρακτική ανάλυση δεδομένων με
+        εξειδικευμένα λογισμικά, προετοιμάζοντας τους φοιτητές για εφαρμογές σε ποικίλους επιστημονικούς και
+        επαγγελματικούς τομείς.</p>
+
+    <p> Χρηματοοικονομικά
+        Το μάθημα "Χρηματοοικονομικά" παρέχει μια εισαγωγή στις βασικές αρχές της χρηματοοικονομικής διαχείρισης.
+        Εξετάζει θέματα όπως ο χρηματοοικονομικός σχεδιασμός, η διαχείριση ρίσκου, οι επενδυτικές αποφάσεις και η
+        αποτίμηση περιουσιακών στοιχείων. Μέσα από παραδείγματα και μελέτες περιπτώσεων, οι φοιτητές αποκτούν πρακτικές
+        γνώσεις χρήσιμες για την κατανόηση των χρηματαγορών και τη λήψη αποφάσεων στον χρηματοοικονομικό τομέα.</p>
+
+    <p> Τραπεζική Λογιστική
+        Το μάθημα "Τραπεζική Λογιστική" επικεντρώνεται στις λογιστικές διαδικασίες και κανονισμούς που αφορούν τον
+        τραπεζικό τομέα. Καλύπτει θέματα όπως η κατάρτιση οικονομικών καταστάσεων τραπεζών, η αποτίμηση δανείων και
+        χρηματοοικονομικών προϊόντων, καθώς και η συμμόρφωση με διεθνή πρότυπα. Το μάθημα προσφέρει πρακτικές γνώσεις
+        για όσους ενδιαφέρονται να εργαστούν στη λογιστική ή τη διοίκηση τραπεζικών ιδρυμάτων.</p>
+
+    <p>Διεθνής Οικονομική
+        Το μάθημα "Διεθνής Οικονομική" εξετάζει τη λειτουργία της παγκόσμιας οικονομίας και τις σχέσεις μεταξύ χωρών.
+        Θέματα όπως το διεθνές εμπόριο, οι συναλλαγματικές ισοτιμίες, η παγκόσμια χρηματοπιστωτική αγορά και οι
+        πολιτικές εμπορίου αποτελούν κεντρικό άξονα. Οι φοιτητές αποκτούν γνώσεις για την ανάλυση των οικονομικών
+        σχέσεων σε διεθνές επίπεδο, χρήσιμες για καριέρες στη διπλωματία, τις επιχειρήσεις και τη διεθνή οικονομική
+        έρευνα.</p>
+
+    <p>Οικονομετρία
+        Το μάθημα "Οικονομετρία" συνδυάζει τη στατιστική, τα μαθηματικά και την οικονομική θεωρία για την ανάλυση
+        οικονομικών δεδομένων. Οι φοιτητές μαθαίνουν να χρησιμοποιούν εργαλεία όπως η παλινδρόμηση και οι χρονολογικές
+        σειρές για την κατανόηση και πρόβλεψη οικονομικών φαινομένων. Το μάθημα περιλαμβάνει πρακτική εφαρμογή με
+        λογισμικά ανάλυσης δεδομένων, καθιστώντας το ιδανικό για φοιτητές που ενδιαφέρονται για ερευνητική ή αναλυτική
+        εργασία.</p>
+
+    <p>Οικονομικό Δίκαιο
+        Το μάθημα "Οικονομικό Δίκαιο" εξετάζει το νομικό πλαίσιο που διέπει την οικονομική δραστηριότητα. Περιλαμβάνει
+        θέματα όπως οι εμπορικές συμβάσεις, η εταιρική νομοθεσία, οι κανόνες ανταγωνισμού και οι διεθνείς νομικές
+        κανονιστικές διατάξεις. Οι φοιτητές αποκτούν βασικές γνώσεις για τη σύνδεση της νομικής και οικονομικής
+        επιστήμης, χρήσιμες για καριέρες στον επιχειρηματικό και νομικό τομέα.</p>
+
+    <p>Εγχώρια Οικονομική
+        Το μάθημα "Εγχώρια Οικονομική" επικεντρώνεται στη μελέτη της οικονομικής δραστηριότητας σε εθνικό επίπεδο.
+        Θέματα όπως η δημοσιονομική πολιτική, η νομισματική πολιτική, η απασχόληση και οι εγχώριες επενδύσεις βρίσκονται
+        στο επίκεντρο. Οι φοιτητές μαθαίνουν να αναλύουν τις οικονομικές πολιτικές και τη σχέση τους με την ανάπτυξη της
+        χώρας.</p>
+
+
+    <p>Φυσιολογία
+        Το μάθημα "Φυσιολογία" εξετάζει τη λειτουργία των συστημάτων του ανθρώπινου σώματος. Από τη νευρική και
+        καρδιαγγειακή λειτουργία έως το πεπτικό και αναπνευστικό σύστημα, οι φοιτητές μελετούν πώς συνεργάζονται τα
+        συστήματα για τη διατήρηση της υγείας. Το μάθημα συνδυάζει θεωρία και εργαστηριακές ασκήσεις, παρέχοντας
+        ολοκληρωμένες γνώσεις χρήσιμες για βιολογικές και ιατρικές σπουδές.</p>
+
+    <p>Μοριακή Βιολογία
+        Το μάθημα "Μοριακή Βιολογία" εστιάζει στις μοριακές δομές και λειτουργίες των κυττάρων. Οι φοιτητές μαθαίνουν
+        για τη δομή και τη λειτουργία των DNA, RNA και πρωτεϊνών, καθώς και για τις μηχανισμούς γονιδιακής έκφρασης και
+        ρύθμισης. Το μάθημα συνδυάζει θεωρία με πρακτική, προετοιμάζοντας τους φοιτητές για ερευνητική εργασία στους
+        τομείς της γενετικής και της βιοτεχνολογίας.
+
+    </p>
+
+    <p>Γενετική
+        Το μάθημα "Γενετική" ασχολείται με τη μελέτη της κληρονομικότητας και των γονιδιακών μηχανισμών. Οι φοιτητές
+        μαθαίνουν για τη δομή και τη λειτουργία των γονιδίων, τις μεταλλάξεις, τις μεθόδους γενετικής ανάλυσης και τις
+        εφαρμογές της γενετικής στην ιατρική και τη βιοτεχνολογία. </p>
+
+    <p>Αναλυτική Χημεία
+        Το μάθημα "Αναλυτική Χημεία" διδάσκει τις τεχνικές ανάλυσης χημικών ουσιών, από κλασικές μεθόδους έως σύγχρονα
+        όργανα. Οι φοιτητές εξοικειώνονται με την ποιοτική και ποσοτική ανάλυση, τις φασματοσκοπικές μεθόδους και τη
+        χρωματογραφία. Το μάθημα περιλαμβάνει εργαστηριακή εξάσκηση, προετοιμάζοντας τους για καριέρες στη χημεία, τη
+        φαρμακευτική και την περιβαλλοντική επιστήμη.</p>
+
+    <p>Μικροβιολογία
+        Το μάθημα "Μικροβιολογία" εξετάζει τη βιολογία μικροοργανισμών, όπως βακτήρια, ιούς και μύκητες. Οι φοιτητές
+        μαθαίνουν για τη δομή, τη λειτουργία και τη σημασία τους στη φύση, την υγεία και τη βιομηχανία. Το μάθημα
+        περιλαμβάνει θεωρία και εργαστηριακή εξάσκηση, εστιάζοντας στη διάγνωση και την αντιμετώπιση μολύνσεων.</p>
+
+    <p>Εξελικτική Βιολογία
+        Το μάθημα "Εξελικτική Βιολογία" εξετάζει τις διαδικασίες εξέλιξης των οργανισμών, από τη φυσική επιλογή έως τη
+        γενετική μεταβλητότητα. Οι φοιτητές μελετούν τη βιολογική ποικιλομορφία, την εξέλιξη των ειδών και τις μοριακές
+        βάσεις της εξέλιξης, αποκτώντας γνώσεις για τη βιολογία, τη γενετική και την οικολογία.</p>
+
 
     <iframe src="./footer.html" class="footer" id="footer_iframe"></iframe>
 </body>
